# gameboy

./: .gitignore  Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
desktop/: Cargo.toml
desktop/src/: main.rs
gameboy/: Cargo.toml  build.rs  gameboy.h
gameboy/src/: c_bindings.rs  cb_instructions.rs  clock.rs  controller.rs  cpu.rs  game_boy.rs  gpu.rs  instructions.rs  interrupts.rs  lib.rs  libretro_bindings.rs  math.rs  mbc1.rs  memory.rs  sound.rs  tests.rs  util.rs  vain.rs
libretrocore/: Cargo.toml
libretrocore/src/: lib.rs  libretro_types.rs
src/: cb_instructions.rs  clock.rs  controller.rs  cpu.rs  game_boy.rs  gpu.rs  instructions.rs  interrupts.rs  main.rs  math.rs  mbc1.rs  memory.rs  tests.rs  util.rs
