[package]
name = "desktop"
version = "0.1.0"
authors = ["Nick Wessing <nwessing3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gameboy = { path = "../gameboy" }

[dependencies.sdl2]
version = "0.35.2"
features = ["bundled"]
